--- a/add-property-from-dimension/config.conf
+++ b/add-property-from-dimension/config.conf
@@ -10,4 +10,4 @@ limit_num = 6000
 # This is the name of the Property you would like to add to each dimension:value pair (with the value same as your original dimension)
 property_name = host.name
 # any description you would like to add
-description = "host.name1 value is the same as hostname"
+description = "host.name value is the same as hostname"
